fix spacing between posts

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a {
     padding: 10px;
 }
 
-article {
+,.picasso-post {
     background-color: #f3f3f3;
     border-radius: 15px;
     margin: 0 auto;
@@ -64,6 +64,14 @@ article {
     padding-bottom: 0;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.frida-post {
+    background-color: #f3f3f3;
+    border-radius: 15px;
+    margin: 0 auto;
+    padding: 2% 7%;
+    text-align: center;
 }
 
 .frida-post p {
